# StoryDAG

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/references/: 00-first-principles.md  01-adaptation-system.md  02-episode-architecture.md  03-script-writing-standard.md  16-dramatic-principles.md  README.md
schemas/: causal_graph.json  script_output.yaml
src/storydag/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/storydag/causopt/: __init__.py  mcts.py  models.py  optimize.py  rollout.py  scoring.py
src/storydag/cgca/: __init__.py  blacklist.py  combined_processor.py  gating.py  generator.py  history.py  logits_processor.py
src/storydag/cnge/: __init__.py  coref.py  extractor.py  graph.py  prompts.py  segmentation.py  types.py
src/storydag/cnge/auditor/: __init__.py  app.py
src/storydag/cnge/auditor/templates/: auditor.html
src/storydag/llm/: __init__.py  client.py  types.py
src/storydag/serialization/: __init__.py  __main__.py  metrics.py  schema.py  yaml_reader.py  yaml_writer.py
tests/: test_causopt_mcts.py  test_causopt_models.py  test_causopt_scoring.py  test_cgca_blacklist.py  test_cgca_gating.py  test_cgca_history.py  test_cnge_coref.py  test_cnge_extractor.py  test_cnge_graph.py  test_cnge_segmentation.py  test_config.py  test_llm_client.py  test_pipeline.py  test_serialization_metrics.py  test_serialization_yaml.py
