[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storydag"
version = "0.1.0"
description = "Causal-continuity-preserving novel-to-script adaptation via hard DAG constraints"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "networkx>=3.0,<4.0",
    "numpy>=1.24,<3.0",
    "sentence-transformers>=2.2,<4.0",
    "flask>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
]
local-llm = [
    "transformers>=4.40,<5.0",
    "torch>=2.0,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
